# covguard

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE-MIT  README.md  SECURITY.md  bdd_all_output.txt  bdd_output.txt
.cargo/: mutants.toml
.gemini/ralph/: state.json
.github/: CODEOWNERS  dependabot.yml  settings.yml
.github/workflows/: ci.yml  example-covguard.yml  release.yml
artifacts/covguard/: final_covered.json  final_test.json  final_test.md  git_test.json  report.json  report_covered.json  report_covered_test.json  report_pass.json  sarif.json
bdd/features/: configuration_edge_cases.feature  diff_coverage.feature  error_handling.feature  implementation_plan_conformance.feature  multi_format_coverage.feature  output_format_edge_cases.feature  performance_and_scale.feature
config/: covguard.toml
contracts/fixtures/: malformed.json  (+5 more)
crates/covguard-adapters-artifacts/: Cargo.toml  README.md
crates/covguard-adapters-artifacts/src/: lib.rs
crates/covguard-adapters-composite/: Cargo.toml
crates/covguard-adapters-composite/src/: lib.rs
crates/covguard-adapters-coverage/: CLAUDE.md  Cargo.toml  README.md
crates/covguard-adapters-coverage-py/: Cargo.toml
crates/covguard-adapters-coverage-py/src/: lib.rs
crates/covguard-adapters-coverage/src/: coverage_py.rs  jacoco.rs  lib.rs
crates/covguard-adapters-coverage/tests/: deep_analysis.rs
crates/covguard-adapters-diff/: CLAUDE.md  Cargo.toml  README.md
crates/covguard-adapters-diff/proptest-regressions/: lib.txt
crates/covguard-adapters-diff/src/: lib.rs
crates/covguard-adapters-diff/tests/: deep_analysis.rs  overlapping_hunks.rs
crates/covguard-adapters-jacoco/: Cargo.toml
crates/covguard-adapters-jacoco/src/: lib.rs
crates/covguard-adapters-repo/: CLAUDE.md  Cargo.toml  README.md
crates/covguard-adapters-repo/src/: lib.rs
crates/covguard-app/: CLAUDE.md  Cargo.toml  README.md
crates/covguard-app/src/: lib.rs
crates/covguard-app/src/snapshots/: covguard_app__tests__full_markdown_uncovered.snap  covguard_app__tests__full_sarif_uncovered.snap  covguard_app__tests__report_covered.snap  covguard_app__tests__report_empty_diff.snap  covguard_app__tests__report_partial.snap  covguard_app__tests__report_uncovered.snap
crates/covguard-app/tests/: bdd.rs  schema_validation.rs
crates/covguard-benchmarks/: Cargo.toml  README.md
crates/covguard-benchmarks/benches/: coverage_parsing.rs  diff_parsing.rs  policy_evaluation.rs  report_generation.rs
crates/covguard-cli/: CLAUDE.md  Cargo.toml  README.md
crates/covguard-cli-core/: Cargo.toml
crates/covguard-cli-core/src/: lib.rs
crates/covguard-cli-types/: Cargo.toml
crates/covguard-cli-types/src/: lib.rs
crates/covguard-cli/src/: main.rs
crates/covguard-cli/tests/: generated_crypto_fixtures.rs  integration.rs
crates/covguard-codes/: Cargo.toml
crates/covguard-codes/src/: lib.rs
crates/covguard-config/: CLAUDE.md  Cargo.toml  README.md
crates/covguard-config/src/: lib.rs
crates/covguard-core/: CLAUDE.md  Cargo.toml  README.md
crates/covguard-core/src/: lib.rs
crates/covguard-core/src/snapshots/: covguard_core__tests__full_markdown_uncovered.snap  covguard_core__tests__full_sarif_uncovered.snap  covguard_core__tests__report_covered.snap  covguard_core__tests__report_empty_diff.snap  covguard_core__tests__report_partial.snap  covguard_core__tests__report_skip_no_coverage.snap  covguard_core__tests__report_uncovered.snap
crates/covguard-core/tests/: bdd.rs  schema_validation.rs
crates/covguard-directives/: Cargo.toml  README.md
crates/covguard-directives/src/: lib.rs
crates/covguard-domain/: CLAUDE.md  Cargo.toml  README.md
crates/covguard-domain/src/: lib.rs
crates/covguard-orchestrator/: Cargo.toml  README.md
crates/covguard-orchestrator-types/: Cargo.toml
crates/covguard-orchestrator-types/src/: lib.rs
crates/covguard-orchestrator/src/: lib.rs
crates/covguard-orchestrator/src/snapshots/: covguard_app__tests__full_sarif_uncovered.snap  covguard_app__tests__report_skip_no_coverage.snap  covguard_orchestrator__tests__full_sarif_uncovered.snap  covguard_orchestrator__tests__report_covered.snap  covguard_orchestrator__tests__report_empty_diff.snap  covguard_orchestrator__tests__report_partial.snap  covguard_orchestrator__tests__report_skip_no_coverage.snap  covguard_orchestrator__tests__report_uncovered.snap
crates/covguard-output/: Cargo.toml  README.md
crates/covguard-output-features/: Cargo.toml  README.md
crates/covguard-output-features/src/: lib.rs
crates/covguard-output/src/: lib.rs
crates/covguard-paths/: Cargo.toml  README.md
crates/covguard-paths/src/: lib.rs
crates/covguard-policy/: Cargo.toml  README.md
crates/covguard-policy/src/: lib.rs
crates/covguard-ports/: CLAUDE.md  Cargo.toml  README.md
crates/covguard-ports/src/: lib.rs
crates/covguard-profiling/: Cargo.toml  README.md
crates/covguard-profiling/src/: lib.rs
crates/covguard-ranges/: Cargo.toml  README.md
crates/covguard-ranges/src/: lib.rs
crates/covguard-ranges/tests/: merge_ranges_integration.rs
crates/covguard-render-annotations/: Cargo.toml
crates/covguard-render-annotations/src/: lib.rs
docs/: INDEX.md  STATUS.md  adr-gap-analysis.md  architecture.md  breaking-policy.md  codes.md  crate-readme-audit.md  design.md  implementation-plan.md  integration.md  now-next-later.md  overview.md  performance.md  release-audit.md  release-checklist.md  requirements.md  roadmap.md  stability.md  testing.md
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/corpus/fuzz_diff_parser/: crlf_endings.patch  empty_hunk.patch  large_line_numbers.patch  simple_added.patch  with_ignore_directive.patch
fuzz/corpus/fuzz_lcov_parser/: empty_file_record.info  high_hit_count.info  large_line_numbers.info  minimal_valid.info  multiple_files.info  partial_coverage.info  sparse_coverage.info  uncovered.info
fuzz/fuzz_targets/: fuzz_diff_parser.rs  fuzz_lcov_parser.rs  fuzz_ranges_merge.rs
schemas/: receipt.envelope.v1.json
xtask/: Cargo.toml  README.md
xtask/src/: main.rs
(+83 files in other folders)
