[workspace]
resolver = "2"
members = [
    "crates/covguard-types",
    "crates/covguard-domain",
    "crates/covguard-adapters-diff",
    "crates/covguard-adapters-coverage",
    "crates/covguard-render",
    "crates/covguard-config",
    "crates/covguard-app",
    "crates/covguard-core",
    "crates/covguard-cli",
    "xtask",
]

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "Apache-2.0 or MIT"
repository = "https://github.com/effortlessmetrics/cov-guard"
homepage = "https://github.com/effortlessmetrics/cov-guard"
readme = "README.md"
keywords = ["coverage", "diff", "testing", "ci", "code-coverage"]
categories = ["development-tools::testing", "command-line-utilities"]
rust-version = "1.92"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.9.8"
thiserror = "2.0.18"
chrono = { version = "0.4.43", features = ["serde"] }
sha2 = "0.10.9"
glob = "0.3.3"
insta = { version = "1.46.3", features = ["json"] }
cucumber = "0.22.1"
futures = "0.3.31"
