[workspace]
resolver = "2"
members = [
    "crates/covguard-types",
    "crates/covguard-ports",
    "crates/covguard-domain",
    "crates/covguard-policy",
    "crates/covguard-directives",
    "crates/covguard-paths",
    "crates/covguard-ranges",
    "crates/covguard-adapters-diff",
    "crates/covguard-adapters-coverage",
    "crates/covguard-adapters-repo",
    "crates/covguard-adapters-artifacts",
    "crates/covguard-render",
    "crates/covguard-config",
    "crates/covguard-output",
    "crates/covguard-output-features",
    "crates/covguard-reporting",
    "crates/covguard-orchestrator",
    "crates/covguard-app",
    "crates/covguard-core",
    "crates/covguard-cli",
    "xtask",
]

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/effortlessmetrics/cov-guard"
homepage = "https://github.com/effortlessmetrics/cov-guard"
readme = "README.md"
keywords = ["coverage", "diff", "testing", "ci", "code-coverage"]
categories = ["development-tools::testing", "command-line-utilities"]
rust-version = "1.92"

[workspace.dependencies]
covguard-adapters-artifacts = { path = "crates/covguard-adapters-artifacts", version = "0.1.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
covguard-output-features = { path = "crates/covguard-output-features", version = "0.1.0" }
covguard-policy = { path = "crates/covguard-policy", version = "0.1.0" }
covguard-directives = { path = "crates/covguard-directives", version = "0.1.0" }
covguard-paths = { path = "crates/covguard-paths", version = "0.1.0" }
covguard-ranges = { path = "crates/covguard-ranges", version = "0.1.0" }
covguard-output = { path = "crates/covguard-output", version = "0.1.0" }
covguard-reporting = { path = "crates/covguard-reporting", version = "0.1.0" }
covguard-orchestrator = { path = "crates/covguard-orchestrator", version = "0.1.0" }
covguard-render = { path = "crates/covguard-render", version = "0.1.0" }
covguard-types = { path = "crates/covguard-types", version = "0.1.0" }
toml = "1.1.0"
thiserror = "2.0.18"
chrono = { version = "0.4.44", features = ["serde"] }
sha2 = "0.11.0"
glob = "0.3.3"
insta = { version = "1.47.1", features = ["json"] }
cucumber = "0.22.1"
futures = "0.3.32"
uselesskey = { version = "0.5.1", default-features = false, features = ["rsa"] }
