[package]
name = "xtask"
description = "Repository maintenance tasks for covguard (schemas, fixtures, validation)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["xtask", "tooling", "schema", "fixtures", "covguard"]
categories = ["development-tools"]
readme = "README.md"
rust-version.workspace = true
publish = false

[dependencies]
covguard-types = { path = "../crates/covguard-types" }
clap = { version = "4.5.57", features = ["derive"] }
serde_json.workspace = true
jsonschema = "0.41.0"
anyhow = "1.0.101"
