[package]
name = "covguard-adapters-coverage-py"
description = "Coverage.py JSON format parser for Python test coverage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
covguard-paths = { workspace = true }
covguard-ports = { workspace = true }
covguard-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
