[package]
name = "covguard-adapters-coverage"
description = "LCOV coverage file format parser for covguard"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
covguard-paths = { workspace = true }
covguard-ports = { workspace = true }
covguard-types = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = "1.11.0"
covguard-ports = { workspace = true, features = ["proptest"] }
serde_json = { workspace = true }
