[package]
name = "covguard-adapters-diff"
description = "Unified diff parsing adapter for covguard"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
thiserror.workspace = true

[dev-dependencies]
proptest = "1.10.0"
