[package]
name = "covguard-app"
description = "Compatibility facade over covguard-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/covguard-app"
keywords = ["orchestration", "coverage", "diff", "testing", "ci"]
categories = ["development-tools::testing"]
readme = "README.md"
rust-version.workspace = true

[dependencies]
covguard-orchestrator = { path = "../covguard-orchestrator", version = "0.1.0" }
covguard-orchestrator-types = { path = "../covguard-orchestrator-types", version = "0.1.0" }
covguard-ports = { path = "../covguard-ports", version = "0.1.0" }
covguard-adapters-diff = { path = "../covguard-adapters-diff", version = "0.1.0" }
covguard-adapters-composite = { path = "../covguard-adapters-composite", version = "0.1.0" }
covguard-codes = { path = "../covguard-codes", version = "0.1.0" }
covguard-types = { path = "../covguard-types", version = "0.1.0" }
thiserror.workspace = true
chrono.workspace = true

[dev-dependencies]
insta = { workspace = true }
jsonschema = "0.45.0"
cucumber = { workspace = true }
futures = { workspace = true }
covguard-policy = { path = "../covguard-policy", version = "0.1.0" }
covguard-types.workspace = true
covguard-output.workspace = true
covguard-output-features.workspace = true
serde_json.workspace = true
chrono.workspace = true

[[test]]
name = "bdd"
harness = false
