[package]
name = "covguard-cli-core"
description = "Core CLI logic and command execution for covguard"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
covguard-cli-types = { path = "../covguard-cli-types", version = "0.1.0" }
covguard-app = { path = "../covguard-app", version = "0.1.0" }
covguard-orchestrator = { path = "../covguard-orchestrator", version = "0.1.0" }
covguard-orchestrator-types = { path = "../covguard-orchestrator-types", version = "0.1.0" }
covguard-ports = { path = "../covguard-ports", version = "0.1.0" }
covguard-types = { path = "../covguard-types", version = "0.1.0" }
covguard-config = { path = "../covguard-config", version = "0.1.0" }
covguard-adapters-artifacts = { path = "../covguard-adapters-artifacts", version = "0.1.0" }
covguard-adapters-diff = { path = "../covguard-adapters-diff", version = "0.1.0" }
covguard-adapters-repo = { path = "../covguard-adapters-repo", version = "0.1.0" }
covguard-output-features = { path = "../covguard-output-features", version = "0.1.0" }
covguard-profiling = { path = "../covguard-profiling", version = "0.1.0" }
thiserror = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4.6.0", features = ["derive"] }
