[package]
name = "covguard-cli-types"
description = "CLI argument types and command enums for covguard"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
covguard-config = { workspace = true }
serde = { workspace = true }
