[package]
name = "covguard-config"
description = "Configuration loading, profile defaults, and CLI precedence resolution for covguard"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/covguard-config"
keywords = ["config", "toml", "coverage", "policy", "ci"]
categories = ["config", "development-tools::testing"]
readme = "README.md"
rust-version.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
toml.workspace = true
thiserror.workspace = true
glob.workspace = true
