[package]
name = "covguard-core"
description = "Backward-compatible re-export facade for covguard-app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
rust-version.workspace = true

[dependencies]
covguard-app = { path = "../covguard-app", version = "0.2.0" }
