[package]
name = "covguard-core"
description = "Backward-compatible facade crate that re-exports covguard-app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/covguard-core"
keywords = ["coverage", "diff", "facade", "compatibility", "testing"]
categories = ["development-tools::testing"]
readme = "README.md"
rust-version.workspace = true

[dependencies]
covguard-app = { path = "../covguard-app", version = "0.2.0" }
