[package]
name = "covguard-domain"
description = "Pure domain logic for covguard diff coverage policy evaluation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
rust-version.workspace = true

[dependencies]
covguard-types = { path = "../covguard-types", version = "0.2.0" }
serde_json.workspace = true

[dev-dependencies]
proptest = "1.10.0"
