[package]
name = "covguard-orchestrator-types"
description = "Application orchestration types and error definitions for covguard"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
covguard-types = { workspace = true }
covguard-domain = { workspace = true }
covguard-policy = { workspace = true }
covguard-output-features = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
