[package]
name = "covguard-orchestrator"
description = "Application orchestration layer for covguard"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/covguard-orchestrator"
keywords = ["orchestration", "coverage", "diff", "testing", "ci"]
categories = ["development-tools::testing"]
readme = "README.md"
rust-version.workspace = true

[dependencies]
covguard-types = { path = "../covguard-types", version = "0.1.0" }
covguard-orchestrator-types = { path = "../covguard-orchestrator-types", version = "0.1.0" }
covguard-ports = { path = "../covguard-ports", version = "0.1.0" }
covguard-domain = { path = "../covguard-domain", version = "0.1.0" }
covguard-policy = { path = "../covguard-policy", version = "0.1.0" }
covguard-reporting = { path = "../covguard-reporting", version = "0.1.0" }
covguard-directives.workspace = true
covguard-output = { path = "../covguard-output", version = "0.1.0" }
covguard-output-features.workspace = true
covguard-config = { path = "../covguard-config", version = "0.1.0" }
thiserror.workspace = true
chrono.workspace = true
serde_json.workspace = true

[dev-dependencies]
insta = { workspace = true }
jsonschema = "0.46.2"
futures = { workspace = true }
covguard-policy = { path = "../covguard-policy", version = "0.1.0" }
