[package]
name = "covguard-paths"
description = "Reusable path normalization helpers for covguard adapters"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
rust-version.workspace = true

[dependencies]

