[package]
name = "covguard-render-annotations"
description = "GitHub Actions workflow annotations renderer for covguard reports"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
covguard-types = { workspace = true }
